<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">AppNavHomeActivity</string>
    <string name="app_name2">AppNavHomeActivity2</string>
    <string name="title_activity_simple_up">SimpleUpActivityssss</string>
    <string name="simple_up_description">This demo shows the simple case of up navigation that does not ever need to cross across different tasks. Press the up button on the action bar to return to the demo list. For simple drill-down navigation, the application up and system back buttons will navigate to the same location, leaving the task\'s back stack in the same state.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_peer">PeerActivity</string>
    <string name="peer_description">This is an activity that shows content with many navigation peers. Think of a content browser that offers links to related content items. Pressing back from this activity will return to the previously viewed content item if you reached this point through a related link. If you reached it from the app nav example home activity, back will return there. Navigating up from this activity will always return to the app nav example home activity and clean up the back stack along the way.</string>
    <string name="launch_peer">Link to another peer activity</string>
    <string name="peer_count">Peer count: </string>
    <string name="title_activity_view_from_other_task">ViewFromOtherTaskActivity</string>
    <string name="view_from_other_task_description">This combined demo shows how to handle up navigation when another task has launched your app\'s activity on its own task stack. Navigating up in this scenario should synthesize a task stack representing the most common or direct navigation path to the parent activity. The code example shows how to handle this using helper code from the support library. Press the button below to launch a separate task and begin the demo.</string>
    <string name="launch_other_task">Launch new task</string>
    <string name="title_activity_outside_task">OutsideTaskActivity</string>
    <string name="outside_task_description">This activity has been launched in a new task. You can confirm this by pressing the Recents button now and switching back to the app navigation example task. This activity will view content with the fake mimetype \"application/x-example\" which will be received by another code example activity to continue the demo. Press the View button below.</string>
    <string name="launch_content_view">Launch content view activity</string>
    <string name="title_activity_content_category">ContentCategoryActivity</string>
    <string name="intermediate_description">This activity is a parent for the example content viewer activity. Navigating up from the content viewer will lead here. Navigating up from here will lead back to the app navigation home activity. Note that if you reached this activity by navigating up from the example content viewer activity, you are back on the main app navigation example task. Press the button below to navigate to the content viewer activity.</string>
    <string name="title_activity_content_view">ContentViewActivity</string>
    <string name="content_view_description">This activity can receive ACTION_VIEW intents with the mimetype \"application/x-example\", sent by the outside task component of this demo. If you launched the activity this way then it will be on the viewing activity\'s task stack. Press the back button to finish this activity and return to the activity that wanted to view the content. Press the up button in the action bar to jump back into the main demo task with a synthesized back stack. This matches the pattern for content viewers such as a photo gallery or video player.</string>
    <string name="default_status_text">Navigated here from category</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="notifications_description">There are two classes of notifications: notifications that deep-link into an app directly, (e.g. an incoming SMS) and notifications that present an interstitial/summary of multiple collapsed notifications before linking into the app itself. (e.g. Calendar event notifications.) The buttons below will create notifications of each type.</string>
    <string name="post_direct_notification">Post direct notification</string>
    <string name="post_interstitial_notification">Post interstitial notification</string>
    <string name="title_activity_interstitial_message">InterstitialMessageActivity</string>
    <string name="interstitial_description">This is an interstitial activity running in response to a notification. It presents a summary of info in a lightweight manner that does not exist as a task in Recents. Tap the button below to jump to the primary content.</string>
    <string name="interstitial_title">test</string>
    <string name="title_activity_img_view">ImgViewActivity</string>
    <string name="title_activity_digital_clock">DigitalClockActivity</string>
    <string name="cur_time">当前时间：</string>
    <string name="title_activity_list_view">ListViewActivity</string>

    <!-- ListViewActivity -->
    <string name="andy">Andy Rubin \nAndroid的创造者</string>
    <string name="bill">Bill Joy \nJava创造者之一</string>
    <string name="edgar">Edgar F. Codd \n关系数据库之父</string>
    <string name="torvalds">Linus Torvalds \nLinux之父</string>
    <string name="turing">Turing Alan    \nIT的祖师爷</string>
    <string name="ys">您选择了</string>
    <string name="title_activity_grid_view">GridViewActivity</string>

    <string name="noSelectedItem">当前无选中项：</string>
    <string name="andy2">Andy Rubin</string>
    <string name="bill2">Bill Joy</string>
    <string name="edgar2">Edgar F. Codd</string>
    <string name="torvalds2">Linus Torvalds</string>
    <string name="turing2">Turing Alan</string>
    <string name="andydis">Android的创造者</string>
    <string name="billdis">Java创造者之一</string>
    <string name="edgardis">关系数据库之父</string>
    <string name="torvaldsdis">Linux之父</string>
    <string name="turingdis">IT的祖师爷</string>

</resources>
